--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "aman",
   "license": "ISC",
   "dependencies": {
-    "dotnet": "^1.1.4",
+    "@prisma/client": "^5.10.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.10.2"
   }
 }
